tests/test_scope/good/sub_sub_scope.catala_en
## Article

```catala
declaration scope A:
  context output x content integer
  context output u content boolean

declaration scope B:
  a1 scope A
  a2 scope A
  context output y content integer

declaration scope C:
  a scope A
  b scope B
  context output z content integer

scope A:
 definition x equals 0
 definition u equals true

scope B:
  definition a2.x under condition a1.u consequence equals 1
  definition y under condition a2.x = 1 consequence equals 1
  definition y under condition a2.x + 1 = 2 consequence equals 1

scope C:
  definition a.x equals 2
  definition b.y equals 3
  definition z equals 2
```



```catala-test-inline
$ catala Typecheck --check-invariants
[RESULT] Invariant typing_defaults checked. result: [150/150]
[RESULT] Invariant match_inversion checked. result: [0/0]
[RESULT] Invariant app_inversion checked. result: [8/8]
[RESULT] Invariant no_return_a_function checked. result: [7/7]
[RESULT] Invariant no_partial_evaluation checked. result: [8/8]
[RESULT] Invariant default_no_arrow checked. result: [19/19]
[RESULT] Typechecking successful!
```

```catala-test-inline
$ catala Interpret -s A
[RESULT] Computation successful! Results:
[RESULT] u = true
[RESULT] x = 0
```

```catala-test-inline
$ catala Interpret -s B
[RESULT] Computation successful! Results:
[RESULT] y = 1
```

```catala-test-inline
$ catala Interpret -s C
[RESULT] Computation successful! Results:
[RESULT] z = 2
```
```catala-test-inline
$ catala Interpret_Lcalc -s A --avoid-exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] u = true
[RESULT] x = 0
```
```catala-test-inline
$ catala Interpret_Lcalc -s B --avoid-exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] y = 1
```
```catala-test-inline
$ catala Interpret_Lcalc -s C --avoid-exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] z = 2
```
