tests/test_scope/bad/bad_sub_sub_scope.catala_en
## Article

```catala
declaration scope A:
  context x content integer
  context u content boolean

declaration scope B:
  context a1 scope A
  context a2 scope A
  context y content integer

declaration scope C:
  context a scope A
  context b scope B
  context z content integer

scope A:
 definition x equals 0
 definition u equals true

scope B:
  definition a2.x under condition a1.u consequence equals 1
  definition y under condition a2.x = 1 consequence equals 1
  definition y under condition a2.x + 1 = 2 consequence equals 1

scope C:
  definition a.x equals 2
  definition b.y equals 3
  definition z equals 2
```
